--- a/dungca_tsa4.css
+++ b/dungca_tsa4.css
@@ -7,7 +7,7 @@ body{
     width: 100vw;
     height: 100vh;
     background-size:cover;
-    background-repeat: nor-repeat;
+    background-repeat: no-repeat;
 }
 .h1{
     text-align: center;
