--- a/dungca_tsa4.css
+++ b/dungca_tsa4.css
@@ -4,8 +4,8 @@
 body{
     background-image:
     url("BG 5.jpg");
-    width: 100vw;
-    height: 100vh;
+    /* width: 100vw;
+    height: 100vh; */
     background-size: cover;
 }
 .h1{
