--- a/design.css
+++ b/design.css
@@ -298,7 +298,12 @@ body {
 
 .serv-box .text {
     flex: 3;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
+
 
 .btn {
     display: inline-block;
